Fixed alignment of edit link button in text editor

--- a/media/boom/css/boom/wysihtml5.less
+++ b/media/boom/css/boom/wysihtml5.less
@@ -6,7 +6,7 @@ span[contenteditable] {
 [data-wysihtml5-dialog="createBoomLink"] {
 	position: fixed;
 	left: 60px;
-	top: 385px;
+	top: 330px;
 	background: #222;
 }
 
